test/caffeine_lang/corpus/frontend/parser/errors/expects_with_requires.caffeine
Expectations for "test"
  * "item":
    Requires { env: String }
    Provides { value: "x" }
